force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <description
  >Represents a user&apos;s questionnaire session, tracking when they started and completed the assessment.</description>
    <label>Response</label>
    <nameField>
        <displayFormat>RESP-{0000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>