force-app/main/default/objects/Response__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description
  >The date and time when the user completed the questionnaire.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Timestamp when the user finished the assessment and submitted their responses.</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>