force-app/main/default/objects/Response__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description
  >Unique identifier for the user&apos;s questionnaire session, used for tracking and data integrity.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText
  >Auto-generated unique identifier for this questionnaire session.</inlineHelpText>
    <label>Session ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>