force-app/main/default/objects/Response__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <description
  >The date and time when the user started the questionnaire.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Timestamp when the user began taking the assessment.</inlineHelpText>
    <label>Started Date</label>
    <type>DateTime</type>
</CustomField>